--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "video-gallery",
+  "name": "media-explorer-tauri-vue",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,31 +11,32 @@
   },
   "dependencies": {
     "@tailwindcss/postcss7-compat": "^2.2.17",
-    "@tauri-apps/api": "^1.0.0-beta.8",
-    "autoprefixer": "^9",
-    "core-js": "^3.6.5",
-    "postcss": "^7",
+    "@tauri-apps/api": "^1.2.0",
+    "autoprefixer": "^10",
+    "core-js": "^3.29.0",
+    "postcss": "^8",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
-    "vue": "^3.0.0",
+    "vue": "^3.2.47",
     "vue-class-component": "^8.0.0-0",
-    "vue-router": "^4.0.0-0"
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
-    "@vue/eslint-config-typescript": "^7.0.0",
+    "@tauri-apps/cli": "^1.2.3",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "@typescript-eslint/parser": "^5.54.0",
+    "@vue/cli-plugin-babel": "~5.0.8",
+    "@vue/cli-plugin-eslint": "^5.0.8",
+    "@vue/cli-plugin-router": "~5.0.8",
+    "@vue/cli-plugin-typescript": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
+    "@vue/compiler-sfc": "^3.2.47",
+    "@vue/eslint-config-typescript": "^11.0.2",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0",
-    "typescript": "~4.1.5",
-    "vue-cli-plugin-tailwind": "~2.2.18",
-    "vue-cli-plugin-tauri": "~1.0.0-beta.6"
+    "eslint": "^8.35.0",
+    "eslint-plugin-vue": "^9.9.0",
+    "typescript": "~4.9.5",
+    "vue-cli-plugin-tailwind": "~3.0.0",
+    "vue-cli-plugin-tauri": "^1.0.0"
   },
   "eslintConfig": {
     "root": true,
